Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "enumitem.doc.tar.xz": 67617a8f68ada5af5a230d9c2f0930077ede087e
-  "enumitem.tar.xz": a6d3a8446b1924520d450d28c92033b234dbf604
+  enumitem.doc.r51423.tar.xz: 80f0ef3839cc3f0247580fd8602dc94f34ee84e0
+  enumitem.r51423.tar.xz: 7dfd748f10cce341ac6abbdd88d2888bd8069ffa
